@@ -6,6 +6,13 @@ Note: This file contains only changes in the 'default' branch.
 
 2015-07-12
 
+  - Implemented support for arithmetic operations: +, -, *, / and parenthesis
+    groupings are now supported, anywhere that a number can be seen in the input
+    file, including postings, costs & prices, and balance numbers.
+
+
+2015-07-12
+
   - Changed how web & report rendering code renders numbers so that it uses the
     DisplayContext inferred from the numbers in the input file. Numbers in the
     reports were previously using the default precision and that led to all
